Bug 1449042: Negotiate tracks even when they're not active. r=drno

MozReview-Commit-ID: CBhwHgjt1gf